--- a/box-resources/login.html
+++ b/box-resources/login.html
@@ -58,7 +58,7 @@
                 <div id="error_area" class="error_area">
                     <div class="error_content">
                         <img id="imError" class="image-error" src="https://demo.personium.io/HomeApplication/__/icons/ico_error.png"/>
-                        <span id="error_msg" class="error_msg" data-i18n="Error">エラー</span>
+                        <span id="error_msg" class="error_msg" data-i18n="Error">Error</span>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header login-header">
-                        <h4 class="modal-title" data-i18n="inputLoginCellTitle">ログインセル入力</h4>
+                        <h4 class="modal-title" data-i18n="inputLoginCellTitle">Login cell input</h4>
                     </div>
                     <div class="modal-body">
                         <form>
