--- a/box-resources-demo/login.html
+++ b/box-resources-demo/login.html
@@ -5,36 +5,34 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Personium Cell</title>
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
         <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
             <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.4.3/i18next.min.js"></script>
+        <script src="https://unpkg.com/i18next-xhr-backend/i18nextXHRBackend.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/2.0.0/i18nextBrowserLanguageDetector.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-        <script src="../appcell-resources/js/i18next-1.6.3.js"></script>
         <script src="../appcell-resources/js/load.i18n.js"></script>
         <script src="../appcell-resources/js/utils.js"></script>
         <script src="../appcell-resources/js/login.js"></script>
         <script src="../appcell-resources/js/demo.js"></script>
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-        <!--
-        <link href='https://demo.personium.io/HomeApplication/__/css/common.css' rel='stylesheet' type='text/css'>
-        <link href='https://demo.personium.io/HomeApplication/__/css/login.css' rel='stylesheet' type='text/css'>
-        <link href='https://demo.personium.io/HomeApplication/__/css/demo.css' rel='stylesheet' type='text/css'>
-        -->
         <link href='../appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
         <link href='../appcell-resources/css/login.css' rel='stylesheet' type='text/css'>
         <link href='../appcell-resources/css/demo.css' rel='stylesheet' type='text/css'>
 <script type="text/javascript">
-    $(window).load(function() {
+    function init() {
         demo.initTarget();
 
-        $("#iAccountName").attr("placeholder", tran.msg("accountNamePlaceHolder"));
-        $("#iAccountPw").attr("placeholder", tran.msg("accountPassPlaceHolder"));
-        $("#tutorial1").html(tran.msg("Demo.loginTutorial1"));
-        $("#tutorial2").html(tran.msg("Demo.loginTutorial2"));
-    });
+        $("#iAccountName").attr("placeholder", i18next.t("accountNamePlaceHolder"));
+        $("#iAccountPw").attr("placeholder", i18next.t("accountPassPlaceHolder"));
+        $("#tutorial1").html(i18next.t("Demo.loginTutorial1"));
+        $("#tutorial2").html(i18next.t("Demo.loginTutorial2"));
+    }
 </script>
     </head>
     <body id="translate">
@@ -67,7 +65,7 @@
                 <div id="error_area" class="error_area">
                     <div class="error_content">
                         <img id="imError" class="image-error" src="https://demo.personium.io/HomeApplication/__/icons/ico_error.png"/>
-                        <span id="error_msg" class="error_msg">Error</span>
+                        <span id="error_msg" class="error_msg" data-i18n="Error">Error</span>
                     </div>
                 </div>
             </div>
