--- a/box-resources/main.html
+++ b/box-resources/main.html
@@ -95,16 +95,8 @@ ha.dispInsAppList = function() {
 ha.dispInsAppListSchema = function(schema, boxName) {
     cm.getProfile(schema).done(function(profData) {
         var dispName = boxName + "_DisplayName";
-        if (profData.en && profData.en.DisplayName) {
-            i18next.addResource("en", "translation", dispName, profData.en.DisplayName);
-        } else {
-            i18next.addResource("en", "translation", dispName, profData.DisplayName);
-        }
-        if (profData.ja && profData.ja.DisplayName) {
-            i18next.addResource("ja", "translation", dispName, profData.ja.DisplayName);
-        } else {
-            i18next.addResource("ja", "translation", dispName, profData.DisplayName);
-        }
+        cm.i18nAddProfile("en", "translation", boxName, profData);
+        cm.i18nAddProfile("ja", "translation", boxName, profData);
         var imageSrc = cm.notAppImage;
         if (profData.Image) {
             imageSrc = profData.Image;
@@ -138,8 +130,7 @@ ha.dispInsAppListSchema = function(schema, boxName) {
                              + '</div>'
                              + '<div class="ins-app-name" data-i18n="' + dispName + '"></div>'
                              + '</a>';
-                    $("#dashboard_ins").append(html);
-                    updateContent();
+                    $("#dashboard_ins").append(html).localize();
                 });
             }
         });
