Brush up English

--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
 			<div id="main-wrapper">
 				<div class="wrapper style3">
 				   <h2 data-i18n="homeapp-title"></h2>
-				   <h2 data-i18n="homeapp-overview"></h2><br>
+				   <h3 data-i18n="homeapp-overview"></h3>
 				   <p data-i18n="[html]home-app-description"></p>
-
 				   <p data-i18n="[html]home-app-url-tutorial"></p>
 				   <p data-i18n="[html]home-app-url"></p>
 
