box Installation support

--- a/box-resources-demo/login.html
+++ b/box-resources-demo/login.html
@@ -10,20 +10,21 @@
             <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.4.3/i18next.min.js"></script>
         <script src="https://unpkg.com/i18next-xhr-backend/i18nextXHRBackend.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/2.0.0/i18nextBrowserLanguageDetector.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-        <script src="../appcell-resources/js/load.i18n.js"></script>
-        <script src="../appcell-resources/js/utils.js"></script>
-        <script src="../appcell-resources/js/login.js"></script>
-        <script src="../appcell-resources/js/demo.js"></script>
+        <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/load.i18n.js"></script>
+        <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/utils.js"></script>
+        <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/login.js"></script>
+        <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/demo.js"></script>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-        <link href='../appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
-        <link href='../appcell-resources/css/login.css' rel='stylesheet' type='text/css'>
-        <link href='../appcell-resources/css/demo.css' rel='stylesheet' type='text/css'>
+        <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
+        <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/login.css' rel='stylesheet' type='text/css'>
+        <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/demo.css' rel='stylesheet' type='text/css'>
 <script type="text/javascript">
     function init() {
         demo.initTarget();
