Bug fix: need to stringify hash when saving it as session storage

--- a/box-resources/homeapp_google_auth.html
+++ b/box-resources/homeapp_google_auth.html
@@ -34,7 +34,7 @@
           var i = cellUrl.indexOf("/"); // first slash
           i = cellUrl.indexOf("/", i + 2);  // second slash
           data.baseUrl = cellUrl.substring(0, i + 1);
-          data.profile = sessionStorage.getItem("myProfile");
+          data.profile = JSON.parse(sessionStorage.getItem("myProfile"));
           //data.userName = username;
           data.userName = "googleAccount";
           sessionStorage.setItem("sessionData", JSON.stringify(data));
