--- a/box-resources-demo/login.html
+++ b/box-resources-demo/login.html
@@ -1,157 +1,163 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Personium Cell</title>
-        <!--[if lt IE 9]>
-            <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.4.3/i18next.min.js"></script>
-        <script src="https://unpkg.com/i18next-xhr-backend/i18nextXHRBackend.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/2.0.0/i18nextBrowserLanguageDetector.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-        <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/load.i18n.js"></script>
-        <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/utils.js"></script>
-        <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/login.js"></script>
-        <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/demo.js"></script>
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-        <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-        <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
-        <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/login.css' rel='stylesheet' type='text/css'>
-        <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/demo.css' rel='stylesheet' type='text/css'>
-<script type="text/javascript">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Personium Cell</title>
+  <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.4.3/i18next.min.js"></script>
+  <script src="https://unpkg.com/i18next-xhr-backend/i18nextXHRBackend.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/2.0.0/i18nextBrowserLanguageDetector.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/load.i18n.js"></script>
+  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/utils.js"></script>
+  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/login.js"></script>
+  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/demo.js"></script>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
+  <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
+  <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/login.css' rel='stylesheet' type='text/css'>
+  <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/demo.css' rel='stylesheet' type='text/css'>
+  <!--     Fonts and icons     -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
+  <script type="text/javascript">
     function init() {
-        demo.initTarget();
+      demo.initTarget();
 
-        $("#iAccountName").attr("placeholder", i18next.t("accountNamePlaceHolder"));
-        $("#iAccountPw").attr("placeholder", i18next.t("accountPassPlaceHolder"));
-        $("#tutorial1").html(i18next.t("Demo.loginTutorial1"));
-        $("#tutorial2").html(i18next.t("Demo.loginTutorial2"));
+      $("#iAccountName").attr("placeholder", i18next.t("accountNamePlaceHolder"));
+      $("#iAccountPw").attr("placeholder", i18next.t("accountPassPlaceHolder"));
+      $("#tutorial1").html(i18next.t("Demo.loginTutorial1"));
+      $("#tutorial2").html(i18next.t("Demo.loginTutorial2"));
     }
-</script>
-    </head>
-    <body id="translate">
-        <section class="login-section">
-            <h1 id="pdsLogo">Personium</h1>
-            <div>
-                <img id="imProfile" src="" class="image-circle-large"/>
-            </div>
-            <div id="tProfileDisplayName" class="sizeHeadLine">Guest</div>
-
-            <div class="login-form-controls">
-                <div>
-                    <input id="iAccountName" type="text" placeholder="Please enter the account name." value=""/>
-                </div>
-
-                <div>
-                    <input id="iAccountPw" type="password" placeholder="Please enter a password." value=""/>
-                </div>
-                <div>
-                    <button class="login_btn round-btn" id="bLogin"><span data-i18n="Login">LOGIN</span></button>
-                </div>
-                <div>
-                    <button class="login_btn_g" id="gLogin">
-                        <img style="width: 24px;height: 24px;margin-right: 8px;background: white;border-radius: 5px;" src="https://demo.personium.io/HomeApplication/__/icons/parts_ico_google.png">
-                        <span data-i18n="loginGoogleAccount">Sign in with your Google Account</span>
-                    </button>
-                </div>
-            </div>
-            <div class="error_box">
-                <div id="error_area" class="error_area">
-                    <div class="error_content">
-                        <img id="imError" class="image-error" src="https://demo.personium.io/HomeApplication/__/icons/ico_error.png"/>
-                        <span id="error_msg" class="error_msg" data-i18n="Error">Error</span>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <div id="modal-input-cell" class="modal fade" role="dialog" data-backdrop="static">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header login-header">
-                        <h4 class="modal-title" data-i18n="inputLoginCellTitle">Login cell input</h4>
-                    </div>
-                    <div class="modal-body">
-                        <form>
-                            <div class="form-group">
-                                <div id="dvCellUrl">Cell URL</div>
-                                <input id="pCellUrl" type="text" class="fontBlack" />
-                                <span id="errorCellUrl" style="color:red"></span>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" id="b-input-cell-ok">OK</button>
-                    </div>
-                </div>
-            </div>
+  </script>
+</head>
+<body id="translate">
+  <div class="mySpinner">
+    <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
+    <span class="sr-only">Loading...</span>
+  </div>
+  <div class="myHiddenDiv">
+    <section class="login-section">
+      <h1 id="pdsLogo">Personium</h1>
+      <div>
+        <img id="imProfile" src="" class="image-circle-large"/>
+      </div>
+      <div id="tProfileDisplayName" class="sizeHeadLine">Guest</div>
+      <div class="login-form-controls">
+        <div>
+          <input id="iAccountName" type="text" placeholder="Please enter the account name." value=""/>
         </div>
 
-        <div id="modal-demo-start" class="modal fade" role="dialog" data-backdrop="static">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header login-header">
-                        <h4 class="modal-title" data-i18n="Demo.loginTitle1">Welcome to the demo version home application</h4>
-                    </div>
-                    <div class="modal-body fontBlack" >
-                        <span id="tutorial1" class="fontBlack">
-                            I will explain how to use the home application in the demo version. <br>
-                            Let's first enter the cell URL to log in. <br>
-                            This time the demo cell URL: <br>
-                            https://demo.personium.io/democell/ <br>
-                            I will try logging in to.
-                        </span>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" id="b-demo-start-ok">OK</button>
-                    </div>
-                </div>
-            </div>
+        <div>
+          <input id="iAccountPw" type="password" placeholder="Please enter a password." value=""/>
         </div>
+        <div>
+          <button class="login_btn round-btn" id="bLogin"><span data-i18n="Login">LOGIN</span></button>
+        </div>
+        <div>
+          <button class="login_btn_g" id="gLogin">
+            <img style="width: 24px;height: 24px;margin-right: 8px;background: white;border-radius: 5px;" src="https://demo.personium.io/HomeApplication/__/icons/parts_ico_google.png">
+            <span data-i18n="loginGoogleAccount">Sign in with your Google Account</span>
+          </button>
+        </div>
+      </div>
+      <div class="error_box">
+        <div id="error_area" class="error_area">
+          <div class="error_content">
+            <img id="imError" class="image-error" src="https://demo.personium.io/HomeApplication/__/icons/ico_error.png"/>
+            <span id="error_msg" class="error_msg" data-i18n="Error">Error</span>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+  <div id="modal-input-cell" class="modal fade" role="dialog" data-backdrop="static">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header login-header">
+          <h4 class="modal-title" data-i18n="inputLoginCellTitle">Login cell input</h4>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <div id="dvCellUrl">Cell URL</div>
+              <input id="pCellUrl" type="text" class="fontBlack" />
+              <span id="errorCellUrl" style="color:red"></span>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" id="b-input-cell-ok">OK</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
-        <div id="modal-celllogin-start" class="modal fade" role="dialog" data-backdrop="static">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header login-header">
-                        <h4 class="modal-title" data-i18n="Demo.loginTitle2">Selecting the login target cell is completed</h4>
-                    </div>
-                    <div class="modal-body fontBlack">
-                        <span id="tutorial2" class="fontBlack">
-                            You can now access the cell you are logging in to. <br>
-                            Let's login to the cell. <br>
-                            Login ID to this cell and PASS<br>
-                            ID: me <br>
-                            PW: democell <br>
-                        </span>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" id="b-celllogin-start-ok">OK</button>
-                    </div>
-                </div>
-            </div>
+  <div id="modal-demo-start" class="modal fade" role="dialog" data-backdrop="static">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header login-header">
+          <h4 class="modal-title" data-i18n="Demo.loginTitle1">Welcome to the demo version home application</h4>
         </div>
+        <div class="modal-body fontBlack" >
+          <span id="tutorial1" class="fontBlack">
+              I will explain how to use the home application in the demo version. <br>
+              Let's first enter the cell URL to log in. <br>
+              This time the demo cell URL: <br>
+              https://demo.personium.io/democell/ <br>
+              I will try logging in to.
+          </span>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" id="b-demo-start-ok">OK</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
-        <div id="modal-demoend-start" class="modal fade" role="dialog" data-backdrop="static">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header login-header">
-                        <h4 class="modal-title" data-i18n="Demo.loginTitle3">Thank you for your hard work.</h4>
-                    </div>
-                    <div class="modal-body fontBlack" data-i18n="Demo.loginTutorial3">
-                        This concludes the description of the demo home application.
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" id="b-demoend-start-ok">OK</button>
-                    </div>
-                </div>
-            </div>
+  <div id="modal-celllogin-start" class="modal fade" role="dialog" data-backdrop="static">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header login-header">
+          <h4 class="modal-title" data-i18n="Demo.loginTitle2">Selecting the login target cell is completed</h4>
         </div>
-    </body>
+        <div class="modal-body fontBlack">
+          <span id="tutorial2" class="fontBlack">
+              You can now access the cell you are logging in to. <br>
+              Let's login to the cell. <br>
+              Login ID to this cell and PASS<br>
+              ID: me <br>
+              PW: democell <br>
+          </span>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" id="b-celllogin-start-ok">OK</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="modal-demoend-start" class="modal fade" role="dialog" data-backdrop="static">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header login-header">
+          <h4 class="modal-title" data-i18n="Demo.loginTitle3">Thank you for your hard work.</h4>
+        </div>
+        <div class="modal-body fontBlack" data-i18n="Demo.loginTutorial3">
+            This concludes the description of the demo home application.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" id="b-demoend-start-ok">OK</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
 </html>
