--- a/bar/90_contents/src/applicationmarket.html
+++ b/bar/90_contents/src/applicationmarket.html
@@ -1,46 +1,54 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Personium Cell</title>
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.4.3/i18next.min.js"></script>
-    <script src="https://unpkg.com/i18next-xhr-backend/i18nextXHRBackend.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/2.0.0/i18nextBrowserLanguageDetector.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/load.i18n.js"></script>
-    <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/common.js"></script>
-    <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/applicationmarket.js"></script>
-    <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/settings.js"></script>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-    <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
-    <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/settings.css' rel='stylesheet' type='text/css'>
-    <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/applicationmarket.css' rel='stylesheet' type='text/css'>
-<script type="text/javascript">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Personium Cell</title>
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.4.3/i18next.min.js"></script>
+  <script src="https://unpkg.com/i18next-xhr-backend/i18nextXHRBackend.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/2.0.0/i18nextBrowserLanguageDetector.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/load.i18n.js"></script>
+  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/common.js"></script>
+  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/applicationmarket.js"></script>
+  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/settings.js"></script>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
+  <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
+  <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/settings.css' rel='stylesheet' type='text/css'>
+  <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/applicationmarket.css' rel='stylesheet' type='text/css'>
+  <!--     Fonts and icons     -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
+  <script type="text/javascript">
     function init() {
         am.initAppMarket();
     };
-</script>
-  </head>
-  <body>
+  </script>
+</head>
+<body>
+  <div class="mySpinner">
+    <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
+    <span class="sr-only">Loading...</span>
+  </div>
+  <div class="myHiddenDiv">
     <div class="container-fluid display-table">
-        <div class="row display-parent-div" id="displayParentDiv">
-            <div class="col-md-12 col-sm-12 display-table-cell v-align">
-                <div class="row header-menu">
-                </div>
-                <div class="row user-dashboard" id="dashboard">
-                </div>
-            </div>
+      <div class="row display-parent-div" id="displayParentDiv">
+        <div class="col-md-12 col-sm-12 display-table-cell v-align">
+          <div class="row header-menu">
+          </div>
+          <div class="row user-dashboard" id="dashboard">
+          </div>
         </div>
+      </div>
     </div>
-  </body>
+  </div>
+</body>
 </html>
