--- a/bar/90_contents/src/main.html
+++ b/bar/90_contents/src/main.html
@@ -1,58 +1,60 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Personium Cell</title>
-        <!--[if lt IE 9]>
-            <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.4.3/i18next.min.js"></script>
-        <script src="https://unpkg.com/i18next-xhr-backend/i18nextXHRBackend.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/2.0.0/i18nextBrowserLanguageDetector.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-        <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/load.i18n.js"></script>
-        <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/utils.js"></script>
-        <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/common.js"></script>
-        <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/settings.js"></script>
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-        <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-        <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
-        <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/settings.css' rel='stylesheet' type='text/css'>
-        <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/main.css' rel='stylesheet' type='text/css'>
-<script type="text/javascript">
-//ha.user= JSON.parse(location.hash.substring(1));
-ha = {};
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Personium Cell</title>
+  <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.4.3/i18next.min.js"></script>
+  <script src="https://unpkg.com/i18next-xhr-backend/i18nextXHRBackend.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/2.0.0/i18nextBrowserLanguageDetector.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/load.i18n.js"></script>
+  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/utils.js"></script>
+  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/common.js"></script>
+  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/settings.js"></script>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
+  <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
+  <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/settings.css' rel='stylesheet' type='text/css'>
+  <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/main.css' rel='stylesheet' type='text/css'>
+  <!--     Fonts and icons     -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
+  <script type="text/javascript">
+    //ha.user= JSON.parse(location.hash.substring(1));
+    ha = {};
 
-ha.systemApps = [
-    {
-        "name": "Community",
-        "icon": "003lighticons-03full.png",
-        "url": "socialgraph.html",
-        "used": true
-    }, {
-        "name": "AppMarket", // With context properly set, it can be AppMarket_biz
-        "icon": "001lighticons-31full.png",
-        "url": "applicationmarket.html",
-        "used": true
-    }
-];
+    ha.systemApps = [
+      {
+          "name": "Community",
+          "icon": "003lighticons-03full.png",
+          "url": "socialgraph.html",
+          "used": true
+      }, {
+          "name": "AppMarket", // With context properly set, it can be AppMarket_biz
+          "icon": "001lighticons-31full.png",
+          "url": "applicationmarket.html",
+          "used": true
+      }
+    ];
 
-function init() {
-    ha.deploySystemApps();
-    ha.dispInsAppList();
-    ha.dispInformation();
-    //createTitleHeader();
-    cm.createProfileHeaderMenu();
-    cm.createSideMenu();
-    st.initSettings();
-    // App launcher from the box list
-};
+    function init() {
+      ha.deploySystemApps();
+      ha.dispInsAppList();
+      ha.dispInformation();
+      //createTitleHeader();
+      cm.createProfileHeaderMenu();
+      cm.createSideMenu();
+      st.initSettings();
+      // App launcher from the box list
+    };
 
 ha.deploySystemApps = function() {
     /*
@@ -197,28 +199,34 @@ ha.dispInformation = function() {
 
     </head>
 
-    <body>
-        <div class="display-parent-div" id="displayParentDiv">
-            <!--<header>-->
-            <header class="profile-menu">
-            </header>
-            <!--</header>-->
-            <section class="dashboard-block" id="main-menu">
-                <h2>MENU</h2>
-                <div class="user-dashboard" id="dashboard">
-                </div>
-            </section>
-            <section class="dashboard-block" id="main-myService">
-                <h2>MY SERVICES</h2>
-                <div class="user-dashboard" id="dashboard_ins">
-                </div>
-            </section>
-            <section id="main-info">
-                <h2>INFORMATION</h2>
-                <ul class="list" id="information">
-                </ul>
-            </section>
-            <a id="info-readmore"><span data-i18n="Dummy.More">More</span></a>
-        </div>
-    </body>
+<body>
+  <div class="mySpinner">
+    <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
+    <span class="sr-only">Loading...</span>
+  </div>
+  <div class="myHiddenDiv">
+    <div class="display-parent-div" id="displayParentDiv">
+      <!--<header>-->
+      <header class="profile-menu">
+      </header>
+      <!--</header>-->
+      <section class="dashboard-block" id="main-menu">
+          <h2>MENU</h2>
+          <div class="user-dashboard" id="dashboard">
+          </div>
+      </section>
+      <section class="dashboard-block" id="main-myService">
+          <h2>MY SERVICES</h2>
+          <div class="user-dashboard" id="dashboard_ins">
+          </div>
+      </section>
+      <section id="main-info">
+          <h2>INFORMATION</h2>
+          <ul class="list" id="information">
+          </ul>
+      </section>
+      <a id="info-readmore"><span data-i18n="Dummy.More">More</span></a>
+    </div>
+  </div>
+</body>
 </html>
