Fixed so that external cell QR code can be input with image and scanner

--- a/bar/90_contents/src/socialgraph.html
+++ b/bar/90_contents/src/socialgraph.html
@@ -21,6 +21,8 @@
   <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/socialgraph.js"></script>
   <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/common.js"></script>
   <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/settings.js"></script>
+  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/qrcode/llqrcode.min.js"></script>
+  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/qrcode/pwebqr.js"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
   <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
