Added message function  - 2.Create Receive Message List

--- a/bar/90_contents/src/message.html
+++ b/bar/90_contents/src/message.html
@@ -47,8 +47,8 @@
                     <div class="row header-menu">
                     </div>
                     <div class="row user-dashboard" id="dashboard">
-                        <div>
-                            <ul class="list">
+                        <div class="panel panel-default list-group">
+                            <ul class="list menu-list">
                                 <li>
                                     <a href="#" class="list-group-item" onclick="ms.openReceiveMsg(); return false;" data-i18n="message:ReceiveMessage"></a>
                                 </li>
