Added message function  - 5.Create reply function, delete function, badge function to display the number of messages

--- a/bar/90_contents/src/main.html
+++ b/bar/90_contents/src/main.html
@@ -43,7 +43,7 @@
           "url": "applicationmarket.html",
           "used": true
       }, {
-          "name": "Message",
+            "name": "Message",
           "icon": "001lighticons-02full.png",
           "url": "message.html",
           "used": true
@@ -81,6 +81,18 @@ ha.deploySystemApps = function() {
             class: 'p-app-icon'
         });
         divTag1.append($(imgTag));
+
+        if (app.name == "Message") {
+            var spanTag = $('<span>', {
+                class: 'badge',
+                id: 'messageCnt'
+            });
+            divTag1.append($(spanTag));
+            cm.getReceivedMessageCntAPI().done(function (res) {
+                var cnt = res.d.__count;
+                if (cnt > 0) $("#messageCnt").html(cnt);
+            })
+        }
 
         var divTag2 = $('<div>', {
             class: 'p-app-name',
